--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,21 @@
 
 /* Your CSS Code here. */
+.holder{
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	height: 100px;
+}
+.item{
+	background-color: green;
+	margin-left: 2px;
+	width: 100px;
+	font-size: 40px;
+}
+.item2{
+	background-color: red;
+	
+}
+.item3{
+	background-color: blue;
+}
